// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open the popup when the button is clicked 1`] = `
Array [
  Array [
    "set-type",
    Object {
      "currentTarget": Object {
        "blur": [Function],
      },
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": Object {
        "blur": [Function],
      },
    },
  ],
]
`;

exports[`should open the popup when the button is clicked 2`] = `
<BubblePopupHelper
  isOpen={true}
  popup={
    <SetTypePopup
      issue={
        Object {
          "type": "bug",
        }
      }
      onSelect={[Function]}
    />
  }
  position="bottomleft"
  togglePopup={[Function]}
>
  <button
    className="button-link issue-action issue-action-with-options js-issue-set-type"
    onClick={[Function]}
  >
    <IssueTypeIcon
      className="little-spacer-right"
      query="bug"
    />
    issue.type.bug
    <i
      className="little-spacer-left icon-dropdown"
    />
  </button>
</BubblePopupHelper>
`;

exports[`should render with the action 1`] = `
<BubblePopupHelper
  isOpen={false}
  popup={
    <SetTypePopup
      issue={
        Object {
          "type": "bug",
        }
      }
      onSelect={[Function]}
    />
  }
  position="bottomleft"
  togglePopup={[Function]}
>
  <button
    className="button-link issue-action issue-action-with-options js-issue-set-type"
    onClick={[Function]}
  >
    <IssueTypeIcon
      className="little-spacer-right"
      query="bug"
    />
    issue.type.bug
    <i
      className="little-spacer-left icon-dropdown"
    />
  </button>
</BubblePopupHelper>
`;

exports[`should render without the action when the correct rights are missing 1`] = `
<span>
  <IssueTypeIcon
    className="little-spacer-right"
    query="bug"
  />
  issue.type.bug
</span>
`;
